# Discrete-Elastic-Rods

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindEigen3.cmake  FindPolyscope.cmake  Findlibigl.cmake  libigl.cmake
src/: DiscreteElasticRods.cpp  DiscreteElasticRods.h  DiscreteElasticRodsAM.cpp  DiscreteElasticRodsAM.h  DiscreteElasticRodsAMDriver.h  DiscreteElasticRodsConnected.cpp  DiscreteElasticRodsConnected.h  DiscreteElasticRodsDriver.h  DiscreteElasticRodsVisualization.h  InputParser.h  SimParameters.h  lib.h  main.cpp
